# bve-reborn

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  bors.toml  deny.toml  rust-toolchain
.github/workflows/: build.yml  coverage.yml  coverage.yml.disable  pr.yml  push.yml  release.yml  repo-state.yml
bve/: Cargo.toml  README.md
bve-build/: Cargo.toml  README.md
bve-build/src/: lib.rs  main.rs  shaders.rs
bve-client/: Cargo.toml
bve-client/src/: main.rs  platform.rs
bve-common/: Cargo.toml
bve-common/src/: iter.rs  lib.rs  nom.rs
bve-conveyor/: Cargo.toml  README.md
bve-conveyor/src/: cache.rs  lib.rs
bve-corpus/: Cargo.toml
bve-corpus/src/: enumeration.rs  logger.rs  main.rs  options.rs  panic.rs  thread_kill.rs
bve-corpus/src/worker/: mod.rs
bve-derive/: Cargo.toml  README.md
bve-derive/src/: c_interface.rs  helpers.rs  kvp.rs  lib.rs  route.rs  serde_proxy.rs  span.rs  test.rs
bve-fuzz/: Cargo.toml  dictionary.txt
bve-native/: Cargo.toml  README.md  cbindgen-c.toml  cbindgen-cpp.toml  cbindgen.toml
bve-native/include/: .gitignore  bve_prefix.h
bve-native/src/: lib.rs  panic.rs
bve-native/src/filesystem/: mod.rs  utf8.rs
bve-native/src/interfaces/: mod.rs
bve-native/src/load/: mesh.rs
bve-native/src/parse/: mesh.rs  mod.rs
bve-native/tests/: CMakeLists.txt  main.c  main.cpp
bve-obj-conv/: Cargo.toml
bve-obj-conv/src/: main.rs
bve-reborn/: .gitignore
bve-render/: Cargo.toml  build.rs
bve-render/shaders/: blit.fs.glsl  blit.vs.glsl  compile  debug_frustum_addressing.fs.glsl  debug_frustums.fs.glsl  debug_light_count.fs.glsl  debug_normals.fs.glsl  forward.fs.glsl  forward.fs.spv  forward.fs.spv.opt  forward.vs.glsl  forward.vs.spv  forward.vs.spv.opt  froxels.cs.glsl  fx.vs.spv  fx.vs.spv.opt  light_culling.cs.glsl  mipmap.cs.glsl  mipmap.cs.spv  mipmap.cs.spv.opt  oit_pass1.fs.glsl  oit_pass1.fs.spv  oit_pass1.fs.spv.opt  oit_pass2.fs.glsl  oit_pass2.fs.spv  oit_pass2.fs.spv.opt  opaque.fs.glsl  opaque.fs.spv  opaque.fs.spv.opt  opaque.vs.glsl  opaque.vs.spv  opaque.vs.spv.opt  skybox.fs.glsl  skybox.vs.glsl  test.fs.glsl  test.fs.hlsl  test.fs.spv  test.fs.spv.opt  test.vs.glsl  test.vs.hlsl  (+6 more)
bve-render/shaders/include/: do_lighting.glsl  frustum.glsl  gamma.glsl  lights.glsl  opaque_signature.glsl
bve-render/src/: camera.rs  compute.rs  frustum.rs  lib.rs  lights.rs  mesh.rs  object.rs  oit.rs  render.rs  screenspace.rs  shader.rs  skybox.rs  statistics.rs  texture.rs
bve-render/src/render/: blit.rs  mod.rs  oit.rs  skybox.rs  utils.rs
bve-render/src/render/cluster/: culling.rs  froxels.rs  mod.rs
bve-rex/: Cargo.toml
bve-rex-sys/: CMakeLists.txt  Cargo.toml  build.rs
bve-rex-sys/src/: lib.rs
bve-rex-sys/src/game/: mod.rs
bve-rex-sys/wrapper/: game.cpp  game.hpp  wrapper.hpp  wrapper_vec.hpp
bve-rex/src/game/: mod.rs
bve/data/l10n/de/: main.ftl
bve/data/l10n/en/: errors.ftl  main.ftl
bve/src/: data.rs  datatypes.rs  iter.rs  lib.rs
bve/src/concurrency/: mod.rs
bve/src/datatypes/: as_u32.rs  hex.rs  mod.rs  sync.rs  time.rs  vec.rs
bve/src/filesystem/: mod.rs  resolve.rs  separators.rs  utf8.rs
bve/src/l10n/: current.rs  load.rs  mod.rs
bve/src/load/mesh/: execution.rs  mod.rs
bve/src/log/: common.rs  data.rs  global.rs  method.rs  mod.rs  subscriber.rs  writer.rs
bve/src/parse/: mesh.rs  mod.rs
bve/src/parse/animated/: mod.rs  structs.rs
bve/src/parse/animated/sections/: includes.rs  mod.rs  object.rs  sound.rs  state_change_sound.rs
bve/src/parse/ats_cfg/: mod.rs
bve/src/parse/ats_cfg/sections/: mod.rs  plugin.rs
bve/src/parse/extensions_cfg/: mod.rs
bve/src/parse/extensions_cfg/sections/: car.rs  coupler.rs  exterior.rs  mod.rs
bve/src/parse/function_scripts/: ir.rs  mod.rs  parser.rs
bve/src/parse/interfaces/: display.rs  error.rs  mod.rs  parser.rs
bve/src/parse/kvp/: mod.rs  parse.rs  traits.rs
bve/src/parse/kvp/tests/: mod.rs
bve/src/parse/mesh/: errors.rs  instructions.rs  mod.rs
bve/src/parse/mesh/instructions/: creation.rs  execution.rs  generation.rs  mod.rs  post_processing.rs
bve/src/parse/mesh/instructions/tests/: b3d_to_csv_syntax.rs  create_instructions.rs  instruction_creation.rs  instruction_execution.rs  mod.rs
bve/src/parse/mesh/instructions/tests/meshes/: README.md  mod.rs
bve/src/parse/panel1_cfg/: mod.rs
bve/src/parse/panel1_cfg/sections/: brake_indicator.rs  digital_indicator.rs  mod.rs  panel.rs  pilot_lamp.rs  pressure_indicator.rs  speed_indicator.rs  view.rs  watch.rs
bve/src/parse/panel2_cfg/: mod.rs
bve/src/parse/panel2_cfg/sections/: digital_gauge.rs  digital_number.rs  linear_gauge.rs  mod.rs  needle.rs  pilot_lamp.rs  subject.rs  this.rs  timetable.rs  version.rs
bve/src/parse/route/: errors.rs  ir.rs  mod.rs  parser.rs  preprocessor.rs
bve/src/parse/route/ir/: dispatch.rs  mod.rs  specials.rs
bve/src/parse/sound_cfg/: mod.rs  sections.rs
bve/src/parse/train_dat/: mod.rs
bve/src/parse/train_dat/sections/: acceleration.rs  brake.rs  cab.rs  car.rs  delay.rs  device.rs  handle.rs  mod.rs  motor.rs  movement.rs  performance.rs  pressure.rs  version.rs
bve/src/parse/util/: comment_strip.rs  loose_numbers.rs  mod.rs  numeric_bool.rs  span.rs
bve/src/runtime/: chunk.rs  client.rs  executor.rs  light.rs  location.rs  mod.rs
bve/src/runtime/cache/: mesh.rs  mod.rs  path.rs  texture.rs
