cargo-features = ["named-profiles"]

[workspace]
members = [
    "bve",
    "bve-build",
    "bve-client",
    "bve-conveyor",
    "bve-corpus",
    "bve-derive",
    "bve-fuzz",
    "bve-native",
    "bve-obj-conv",
    "bve-render",
    "extern/bve-imgui-wgpu"
]

[patch.crates-io]
d3d12 = { git = "https://github.com/cwfitzgerald/d3d12-rs.git", rev = "832f1243a4f67e1383ea0ef8599a03f5f65c8e58" }

[profile.opt-dev]
inherits = "dev"
opt-level = 3
incremental = true
overflow-checks = true
debug-assertions = true
debug = true

[profile.release]
debug = false
debug-assertions = false
lto = true

[profile.profile]
inherits = "release"
debug = true
debug-assertions = false
lto = true
