cargo-features = ["named-profiles"]

[workspace]
members = [
    "bve",
    "bve-build",
    "bve-client",
    "bve-common",
    "bve-conveyor",
    "bve-corpus",
    "bve-derive",
    "bve-native",
    "bve-obj-conv",
    "bve-render",
    "extern/bve-imgui-wgpu"
]

[patch.crates-io]
# Override for hashbrown
hecs = { version = "0.2.12", git = "https://github.com/Ralith/hecs.git", rev = "79405e773c304f9f0f6d21b89a8982438f700adb" }

[profile.opt-dev]
inherits = "dev"
opt-level = 3
incremental = true
overflow-checks = true
debug-assertions = true
debug = true

[profile.release]
debug = false
debug-assertions = false
lto = "thin"

[profile.profile]
inherits = "release"
debug = true
debug-assertions = false
lto = true
