cargo-features = ["named-profiles"]

[workspace]
members = [
    "bve",
    "bve-build",
    "bve-client",
    "bve-common",
    "bve-conveyor",
    "bve-corpus",
    "bve-derive",
    "bve-native",
    "bve-obj-conv",
    "bve-render",
    "extern/bve-imgui-wgpu"
]

[patch.crates-io]
gfx-hal = { version = "0.6", path = "../gfx/src/hal" }
#gfx-backend-empty = { version = "0.6", path = "../gfx/src/backend/empty" }
gfx-backend-vulkan = { version = "0.6", path = "../gfx/src/backend/vulkan" }
gfx-backend-dx12 = { version = "0.6", path = "../gfx/src/backend/dx12" }
gfx-backend-dx11 = { version = "0.6", path = "../gfx/src/backend/dx11" }
gfx-auxil = { version = "0.7", path = "../gfx/src/auxil/auxil" }
#gfx-backend-metal = { version = "0.6", path = "../gfx/src/backend/metal" }

[profile.opt-dev]
inherits = "dev"
opt-level = 3
incremental = true
overflow-checks = true
debug-assertions = true
debug = true

[profile.release]
debug = false
debug-assertions = false
lto = "thin"

[profile.profile]
inherits = "release"
debug = true
debug-assertions = false
lto = "thin"
