[package]
name = "bve-build"
version = "0.0.0-Placeholder"
description = "Remaking OpenBVE using a modern architecture, using Unity and Rust."
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbindgen = "0.9"
structopt = "0.3"
