[package]
name = "bve-build"
version = "0.0.1"
description = "Build Tools for BVE-Reborn"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "building", "serialization", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
nom = { version = "5", default-features = false, features = ["alloc"] }
pico-args = "0.3"