[package]
name = "bve-client"
version = "0.0.1"
description = "BVE-Reborn's main game client"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "simulation"]
keywords = ["bve", "rex", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
renderdoc = ["bve-render/renderdoc"]

[dependencies]
async-std = "1.5.0"
bve = { version = "0.0.1", path = "../bve" }
bve-render = { version = "0.0.1", path = "../bve-render" }
cgmath = "0.17.0"
env_logger = "0.7.1"
image = { version = "0.23.2", default-features = false, features = ["bmp", "gif", "png", "jpeg"] }
imgui = "0.4.0-pre"
imgui-winit-support = "0.4.0-pre"
glam = "0.8.7"
num-traits = "0.2.11"
itertools = "0.9"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
winit = "0.22.1"
