[package]
name = "bve-client"
version = "0.0.1"
description = "BVE-Reborn's main game client"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "simulation"]
keywords = ["bve", "rex", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
renderdoc = ["bve-render/renderdoc"]

[dependencies]
async-std = "1.5.0"
bve = { version = "0.0.1", path = "../bve" }
bve-render = { version = "0.0.1", path = "../bve-render" }
env_logger = "0.7.1"
image = { version = "0.23.2", default-features = false, features = ["bmp", "gif", "png", "jpeg"] }
imgui = "0.4.0"
imgui-winit-support = { version = "0.4.0", git = "https://github.com/BVE-Reborn/imgui-rs.git", rev = "765f76b78610625f7c9b4eed23b97327cbc162be" }
glam = { version = "0.9.1", features = ["debug-glam-assert"] }
mimalloc = "0.1"
num-traits = "0.2.11"
itertools = "0.9"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.56"
winit = { version = "0.22.2", git = "https://github.com/rust-windowing/winit.git", default-features = false, features = ["x11"] }
