[package]
name = "bve-client"
version = "0.0.1"
description = "BVE-Reborn's main game client"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "simulation"]
keywords = ["bve", "rex", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
renderdoc = ["bve-render/renderdoc"]

[dependencies]
async-std = "1.6"
bve = { version = "0.0.1", path = "../bve" }
bve-render = { version = "0.0.1", path = "../bve-render" }
env_logger = "0.7"
image = { version = "0.23", default-features = false, features = ["bmp", "gif", "png", "jpeg"] }
imgui = "0.4"
imgui-winit-support = { version = "0.4", git = "https://github.com/BVE-Reborn/imgui-rs.git", rev = "d95b63623ededc12b0536b7df7d80608b6a605a1" }
glam = { version = "0.12.0", features = ["debug-glam-assert"] }
mimalloc = "0.1"
num-traits = "0.2"
itertools = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "c1ea0dde92e1de9e029e7fbb2485a454aa81b918",  default-features = false, features = ["x11"] }
