[package]
name = "bve-conveyor"
version = "0.1.0"
description = "Buffer belt abstraction for wgpu"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["rendering", "memory-management"]
keywords = ["bve", "memory", "buffer-belt", "wgpu"]

[dependencies]
arrayvec = "0.5"
async-std = "1.6"
bitflags = "1"
lru = { version = "0.6", default-features = false }
log = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "d272a69f676ce4b82692d976a8f9d4a8d93293b9" }

