[package]
name = "bve-corpus"
version = "0.1.0"
description = "Program to run bve parsers against the entire corpus"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

repository = "https://gitlab.bvereborn.com/bve-reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
backtrace = "0.3.42"
bve = { version = "0.0.1", path = "../bve" }
clap = "2.33.0"
crossbeam = "0.7.3"
indicatif = "0.14.0"
itertools = "0.8.2"
libc = "0.2.66"
num_cpus = "1.12.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
structopt = "0.3.8"
tracing = "0.1.12"
walkdir = "2.3.1"
winapi = { version =  "0.3.8", features = ["processthreadsapi"] }