[package]
name = "bve-corpus"
version = "0.1.0"
description = "Program to run bve parsers against the entire corpus"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.8"
backtrace = "0.3"
bve = { version = "0.0.1", path = "../bve" }
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
indicatif = "0.15"
itertools = "0.9"
libc = "0.2"
log = "0.4"
num_cpus = "1"
pico-args = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
