[package]
name = "bve-derive"
version = "0.0.0-Placeholder"
description = "Remaking OpenBVE using a modern architecture, using Unity and Rust."
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://gitlab.bvereborn.com/bve-reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
