[package]
name = "bve-native"
version = "0.0.1"
description = "Remaking OpenBVE using a modern architecture, using Unity and Rust. C API."
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://gitlab.bvereborn.com/bve-reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.42"
bve = { version = "0.0.1", path = "../bve" }
bve-derive = { version = "0.0.1", path = "../bve-derive" }
libc = "0.2.66"
