[package]
name = "bve-render"
version = "0.0.1"
description = "BVE-Reborn's renderer and window managment"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "rendering", "graphics"]
keywords = ["bve", "renderer", "wgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
async-std = "1.5.0"
bve = { version = "0.0.1", path = "../bve" }
bytemuck = "1"
cc = "=1.0.50" # Fix bug in cc
dashmap = "3.11.1"
log = "0.4.8"
num-traits = "0.2.11"
imgui = "0.4.0"
imgui-wgpu = { git = "https://github.com/BVE-Reborn/imgui-wgpu-rs.git", rev = "9cb992fe2949d7f43266a2748cfd98a8ac41bede" }
include_dir = "0.6.0"
image = { version = "0.23.2", default-features = false }
itertools = "0.9"
glam = { version = "0.8.7", features = ["debug-glam-assert"] }
once_cell = "1.3.1"
renderdoc = { version = "0.9.0", default-features = false, optional = true }
slotmap = { version = "0.4.0", features = ["unstable"] }
winit = "0.22.1"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "90307b6715f5c591db3dc7a067b704a501756557" }
zerocopy = "0.3.0"
