[package]
name = "bve-render"
version = "0.0.1"
description = "BVE-Reborn's renderer and window managment"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "rendering", "graphics"]
keywords = ["bve", "renderer", "wgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
async-std = "1.5.0"
bve = { version = "0.0.1", path = "../bve" }
bve-conveyor = { version = "0.1.0", path = "../bve-conveyor" }
bve-imgui-wgpu = { version = "0.0.1", path = "../extern/bve-imgui-wgpu" }
bytemuck = "1"
cc = "1.0.57" # Fix bug in cc
dashmap = "3.11.7"
log = "0.4.8"
num-traits = "0.2.11"
imgui = "0.4.0"
include_dir = "0.6.0"
image = { version = "0.23.2", default-features = false }
itertools = "0.9"
glam = { version = "0.9.1", features = ["debug-glam-assert"] }
once_cell = "1.3.1"
renderdoc = { version = "0.9.0", default-features = false, optional = true }
slotmap = { version = "0.4.0", features = ["unstable"] }
winit = { version = "0.22.2", git = "https://github.com/rust-windowing/winit.git", default-features = false, features = ["x11"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "d272a69f676ce4b82692d976a8f9d4a8d93293b9" }
zerocopy = "0.3.0"

[build-dependencies]
bve-build = { version = "0.0.1", path = "../bve-build" }
