[package]
name = "bve-render"
version = "0.0.1"
description = "BVE-Reborn's renderer and window managment"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "rendering", "graphics"]
keywords = ["bve", "renderer", "wgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
async-std = "1.6"
bve = { version = "0.0.1", path = "../bve" }
bve-conveyor = { version = "0.1.0", path = "../bve-conveyor" }
bve-imgui-wgpu = { version = "0.0.1", path = "../extern/bve-imgui-wgpu" }
bytemuck = "1"
cc = { version = "1", features = ["parallel"] }  # haha parallel compelation go brr
dashmap = "3"
log = "0.4"
num-traits = "0.2"
imgui = "0.4"
include_dir = "0.6"
image = { version = "0.23", default-features = false }
itertools = "0.9"
glam = { version = "0.9.1", features = ["debug-glam-assert"] }
once_cell = "1"
renderdoc = { version = "0.9", default-features = false, optional = true }
slotmap = { version = "0.4", features = ["unstable"] }
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "c1ea0dde92e1de9e029e7fbb2485a454aa81b918", default-features = false, features = ["x11"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "02c1fa563f709bfa7b4781b938781bed57069ad1" }
zerocopy = "0.3"

[build-dependencies]
bve-build = { version = "0.0.1", path = "../bve-build" }
