[package]
name = "bve-rex-sys"
version = "0.0.0-Placeholder"
description = "C bindings to BVE's fork of Rex"
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://gitlab.bvereborn.com/bve-reborn/bve-reborn"
readme = "README.md"
categories = ["games", "simulation"]
keywords = ["bve", "rex", "engine"]

links = "bverex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bve-derive = { version = "0.0.0-Placeholder", path = "../bve-derive" }
sdl2-sys = { version = "0.33.0", features = ["bundled"] }

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0.50"
cfg-if = "0.1.10"
walkdir = "2.3.1"
which = { version = "3.1.0", default-features = false }
