[package]
name = "bve"
version = "0.0.0-Placeholder"
description = "Remaking OpenBVE using a modern architecture, using Unity and Rust."
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://gitlab.bvereborn.com/bve-reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bve-derive = { version = "0.0.0-Placeholder", path = "../bve-derive" }
cgmath = { version = "0.17", features = ["serde"] }
chardetng = "0.1.3"
csv = { version = "1.1" }
encoding_rs = "0.8.22"
indexmap = "1.2"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "0.3"
smallvec = { version = "1", features = ["serde"] }

[dev-dependencies]
maplit = "1"
obj = "0.9.1"
serde_test = "1.0"