[package]
name = "bve"
version = "0.0.1"
description = "Remaking OpenBVE using a modern architecture, using Rust."
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://gitlab.bvereborn.com/bve-reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
bincode = "1.2.1"
bve-derive = { version = "0.0.1", path = "../bve-derive" }
cgmath = { version = "0.17", features = ["serde"] }
chardetng = "0.1.3"
chrono = "0.4.11"
crossbeam-channel = "0.4.2"
csv = { version = "1.1" }
encoding_rs = "0.8.22"
fern = "0.6.0"
fluent = "0.11.0"
hecs = "0.2.10"
include_dir = "0.5.0"
indexmap = "1.2"
itertools = "0.9"
locale_config = "0.3.0"
log = "0.4.8"
nom = { version = "5.1.0", default-features = false, features = ["alloc"] }
num-traits = "0.2.11"
once_cell = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
serde_plain = "0.3"
smallvec = "1.3.0"
unic-langid = { version = "0.8.0", features = ["unic-langid-macros"] }
unic-locale = "0.8.0"

[dev-dependencies]
indoc = "0.3.4"
fern = "0.6.0"
maplit = "1"
obj = "0.9.1"
serde_test = "1.0"
