[package]
name = "bve"
version = "0.0.1"
description = "Remaking OpenBVE using a modern architecture, using Rust."
license = "MPL-2.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

repository = "https://github.com/BVE-Reborn/bve-reborn"
readme = "README.md"
categories = ["games", "parsing", "rendering::data-formats", "simulation"]
keywords = ["bve", "serialization", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5"
async-trait = "0.1"
bve-common = { version = "0.0.1", path = "../bve-common", features = ["iter", "nom"]}
bve-derive = { version = "0.0.1", path = "../bve-derive" }
chardetng = "0.1"
chrono = "0.4"
csv = { version = "1" }
dashmap = "3"
derive_more = { version = "0.99", default-features = false, features = ["as_ref", "as_mut", "deref", "display", "from", "into"] }
encoding_rs = "0.8"
fern = "0.6"
fluent = "0.12"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-intrusive = "0.3"
glam = { version = "0.10.1", features = ["debug-glam-assert", "serde"] }
hecs = "0.2"
image = { version = "0.23", default-features = false, features = ["bmp", "gif", "png"] }
include_dir = "0.6"
indexmap = "1.2"
itertools = "0.9"
locale_config = "0.3"
log = "0.4"
nom = { version = "5", default-features = false, features = ["alloc"] }
num-traits = "0.2"
once_cell = "1.3"
parking_lot = { version = "0.11", features = ["nightly"] }
regex = "1"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_plain = "0.3"
smallvec = { version = "1", features = ["specialization", "may_dangle", "union"] }
smartstring = { version = "0.2", features = ["serde"] }
unic-langid = { version = "0.9", features = ["unic-langid-macros"] }
unic-locale = "0.9"

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
indoc = "1.0"
fern = "0.6"
maplit = "1"
obj = "0.10"
serde_test = "1.0"
